<resources>
    <string name="app_name">FarmaFácil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="array_cartoes">
        <item>Elo</item>
        <item>Visa</item>
        <item>MasterCard</item>
        <item>Hiper</item>
        <item>Avancard</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_configuracao">Configuração</string>
    <string name="btt_add_promo">Add Promoção</string>
    <string name="btt_add_suplementos">Add Suplementos</string>
    <string name="btt_add_medicamento">Add Medicamento</string>
    <string name="btt_add_perfumaria">Add Perfumaria</string>
    <string name="descric_hiny">Descrição do produto</string>
    <string name="valor_hint">Preço do produto</string>
    <string name="labt_hint">Laboratorio</string>
    <string name="produto_hint">Produto</string>
    <string name="check_prodt_promo">Produto Promocional</string>
    <string name="action_pedido_online">PedidoOnline</string>
    <string name="positive_btt_add_pedido">Enviar</string>
    <string name="title_activity_detalhes_menssagens">DetalhesMenssagens</string>
    <string name="privacy">Termos de Privacidade</string>
</resources>
