<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:paddingTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:text="Promo"
            android:id="@+id/go_list_promo"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <Button
            android:text="Med"
            android:id="@+id/go_list_med"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <Button
            android:text="Suple"
            android:id="@+id/go_list_supl"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <Button
            android:text="Perf"
            android:id="@+id/go_list_perf"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:padding="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <EditText
                    android:hint="@string/produto_hint"
                    android:id="@+id/edtxt_produto"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <EditText
                    android:hint="@string/labt_hint"
                    android:id="@+id/edtt_laboratorio"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/edtxt_valor"
                    android:hint="@string/valor_hint"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <ImageView
                android:background="@drawable/ic_add_a_photo_black_24dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:id="@+id/imgbt_capa"
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
        </LinearLayout>
        <EditText
            android:hint="@string/descric_hiny"
            android:id="@+id/edtxt_descric"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <CheckBox
            android:id="@+id/check_prod_promo"
            android:text="@string/check_prodt_promo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <Button
        android:id="@+id/bt_ad_supl"
        android:text="@string/btt_add_suplementos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/bt_ad_med"
        android:text="@string/btt_add_medicamento"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/bt_ad_perf"
        android:text="@string/btt_add_perfumaria"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
